# nermal

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  fix-qtcreator.sh
build-Nermal-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  CTestTestfile.cmake  cmake_install.cmake  compile_commands.json
build-Nermal-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-9d886f3b309d4b764deb.json  cmakeFiles-v1-b41a17f663b751058b80.json  codemodel-v2-138a0e57eea3a124c73b.json  directory-src-Debug-39cf6ab85b48af8b99b3.json  index-2025-07-11T22-30-54-0118.json  target-Nermal-Debug-48286c9ffb8a78f8ce25.json  target-Nermal_autogen-Debug-557ddaca9d655b47bf99.json  target-Nermal_autogen_timestamp_deps-Debug-4e6eb99523384a0f5efa.json  target-mnist_quick_test-Debug-c2b43875c0537df1e33e.json  target-mnist_quick_test_autogen-Debug-63b2183671b535cd5dfa.json  target-mnist_quick_test_autogen_timestamp_deps-Debug-e890f56eecb721522e74.json  target-mnist_test-Debug-a7566696f6ecce9a0370.json  target-mnist_test_autogen-Debug-2cb72d28030da4aff792.json  target-mnist_test_autogen_timestamp_deps-Debug-4a5880add45116623479.json  target-test_neuralnetwork-Debug-9d9e9b71596ba0d4244b.json  target-test_neuralnetwork_autogen-Debug-acbbc77bc641ba2ec098.json  target-test_neuralnetwork_autogen_timestamp_deps-Debug-23463853aa2b24536284.json
build-Nermal-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-Nermal-Desktop-Debug/src/: CTestTestfile.cmake  cmake_install.cmake
build-Nermal-Desktop-Debug/src/Nermal_autogen/: deps  moc_predefs.h
build-Nermal-Desktop-Debug/src/Nermal_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-Nermal-Desktop-Debug/tests/: CTestTestfile.cmake  cmake_install.cmake
build-Nermal-Desktop-Debug/tests/functional/: CTestTestfile.cmake  cmake_install.cmake
build-Nermal-Desktop-Debug/tests/functional/mnist_quick_test_autogen/: deps  moc_predefs.h
build-Nermal-Desktop-Debug/tests/functional/mnist_test_autogen/: deps  moc_predefs.h
build-Nermal-Desktop-Debug/tests/unit/: CTestTestfile.cmake
build-Nermal-Desktop-Debug/tests/unit/test_neuralnetwork_autogen/: deps  moc_predefs.h
build-Nermal-Desktop-Debug/tests/unit/test_neuralnetwork_autogen/include/: test_neuralnetwork.moc.d
cpp/: BUILD_SUMMARY.md  CMakeLists.txt  build.sh
cpp/cmake/: nermal.pc.in  nermalConfig.cmake.in
cpp/src/: neuralnetwork.cpp  neuralnetwork.h
cpp/test/: CMakeLists.txt
cpp/test/functional/: CMakeLists.txt  mnist_test.cpp
cpp/test/unit/: CMakeLists.txt  test_neuralnetwork.cpp
python/: README.md  nermal.py
src/: CMakeLists.txt  drawingwidget.cpp  drawingwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  neuralnetwork.cpp  neuralnetwork.h
tests/functional/: CMakeLists.txt  mnist_test.cpp
tests/unit/: CMakeLists.txt  test_neuralnetwork.cpp
